test/correct/SignumFloat.hs
main = 
    ( signumFloat (-.3.0)
    , signumFloat 3.0
    , signumFloat 0.0
    )
