test/typeerrors/Examples/NewNegationPat.hs
test1 :: Bool -> Bool
test1 (-3) = True

test2 :: Bool -> Bool
test2 (-. 3.0) = True


